improve practiceGround ActionButtons

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body {
   font-family: "Noto Sans JP", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: var(--bg);
   line-height:1.55;
+  max-width: 700px;
 }
 
 /* Ocultar scrollbar de todos los elementos scrollables (agrupado) */
